Skip to content

Frame loss with H264 (all?) packetizers

7ada6eae5567c7d716ca03f3d7ddab90ce50e763 is the first bad commit
commit 7ada6eae5567c7d716ca03f3d7ddab90ce50e763
Author: Thomas Guillem <thomas@gllm.fr>
Date:   Thu Dec 3 15:20:09 2015 +0100

    decoder: also drain the decoder when draining the packetizer
    
    When p_block was NULL, DecoderThread was draining its packetizer or its
    decoder, but was not draining both (when a packetizer was used).

:040000 040000 98c4372e1f27c61da5453d30bde83e40e1c1a5b7 745eac8071bc25e1c4830baa6071b179ddb00129 M	src

reproduceable by ex, forcing packetizer on mp4:

diff --git a/modules/demux/mp4/essetup.c b/modules/demux/mp4/essetup.c
index c8be5a3..d6d8693 100644
--- a/modules/demux/mp4/essetup.c
+++ b/modules/demux/mp4/essetup.c
@@ -348,6 +348,7 @@ int SetupVideoES( demux_t *p_demux, mp4_track_t *p_track, MP4_Box_t *p_sample )
             {
                 msg_Err( p_demux, "missing avcC" );
             }
+            p_track->fmt.b_packetized = false;
             break;
         }
         case VLC_FOURCC( 'h', 'v', 'c', '1' ):
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information