decoder: fix decoder drained when using a packetizer

The packetizer set the *pp_block to NULL, therefore p_block was NULL too.

This fixes a regression from 7ada6eae5567c7d716ca03f3d7ddab90ce50e763

Closes #16128