src/input/decoder.c
@@ -1036,7 +1036,7 @@ static void DecoderProcessVideo( decoder_t *p_dec, block_t *p_block )
             }
         }
         /* Drain the decoder after the packetizer is drained */
-        if( !p_block )
+        if( !pp_block )
             DecoderDecodeVideo( p_dec, NULL );
     }
     else
@@ -1217,7 +1217,7 @@ static void DecoderProcessAudio( decoder_t *p_dec, block_t *p_block )
             }
         }
         /* Drain the decoder after the packetizer is drained */
-        if( !p_block )
+        if( !pp_block )
             DecoderDecodeAudio( p_dec, NULL );
     }
     else
